fix: -Исправлено отображение кнопки -В форме карточки кнопке закрытия убран z-index -Исправлен lang на "ru"

--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -75,19 +75,17 @@
 	font-style: normal;
 	font-weight: 400;
 	line-height: 9px;
-	letter-spacing: 0px;
+	letter-spacing: 0;
 	text-align: center;
 	border: none;
 	border-radius: 30px;
 	background-color: #f9f9f9;
 	transition: opacity 0.3s ease-in-out;
-	z-index: 3;
 	position: absolute;
 	top: 14px;
 	right: 14px;
-	border: none;
 	padding: 0;
-	z-index: 2;
+	/*z-index: 2;*/
 }
 
 .moviecard__button:hover {
@@ -114,7 +112,7 @@
 	padding: 0;
 	background-color: transparent;
 	border: none;
-	z-index: 2;
+	/*z-index: 2;*/
 }
 
 .moviecard__button-delete:hover {
