--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -149,5 +149,5 @@
 }
 
 ._picked2 {
-	margin-right: auto;
+	margin-left: inherit;
 }
